<?xml version="1.0"?>
<package>

  <name>truckparking</name>
  <version>0.0.0</version>
  <description>Simulation of Autonomous Truck Parking</description>

  <maintainer email="edwardahn@cmu.edu">Edward Ahn</maintainer>
  <license>BSD</license>
  <author email="edwardahn@cmu.edu">Edward Ahn</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
